fix: Add menu item class for only on mobile items
Allows us to add additional menu items that are only shown on small
screens, since we hide our “extra nav” on small screens for usability.

--- a/site/web/app/themes/abundanthousingma/resources/assets/styles/layouts/_header.scss
+++ b/site/web/app/themes/abundanthousingma/resources/assets/styles/layouts/_header.scss
@@ -61,6 +61,10 @@
   @media only screen and (min-width: $viewport-breakpoint-large) {
     display: flex;
     text-align: left;
+
+    .menu-item-show-on-small-screens {
+      @include hide-visually;
+    }
   }
 
   text-align: right;
